--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 # systemctl stop systemd-resolved && systemctl disable systemd-resolved && echo -e "nameserver 127.0.0.1\noptions $(ip -4 route ls | grep default | grep -Po '(?<=dev )(\S+)' | head -1)" > /etc/resolv.conf && chattr +i /etc/resolv.conf
-# git clone https://github.com/devops-from-root/dnscrypt-proxy.git && cd dnscrypt-proxy && docker compose up -d
+# git clone https://github.com/devops-from-root/dnscrypt-proxy.git && cd dnscrypt-proxy && docker compose up -d --build
 
 name: dnscrypt
 
@@ -10,11 +10,7 @@ services:
     #image: ghcr.io/devops-from-root/dnscrypt-proxy:latest
     build:
       context: https://github.com/devops-from-root/dnscrypt-proxy.git
-      dockerfile: Dockerfile
-      args:
-        - BUILD_OPTIONS=--no-cache
-    build:
-      context: ${PWD}/.
+#      context: ${PWD}/.
       dockerfile: Dockerfile
       args:
         - BUILD_OPTIONS=--no-cache
