--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ name: dnscrypt-proxy
 services:
   dnscrypt-proxy:
     container_name: dnscrypt-proxy
-    image: ghcr.io/devops-from-root/dnscrypt-proxy:latest
+    image: ghcr.io/devops-from-root/dnscrypt-proxy:main
     #image: dnscrypt-proxy
     #build:
       #context: https://github.com/devops-from-root/dnscrypt-proxy.git
